# deprecated-cmd3-pbs

./: Journal.txt  README.md  README.rst  clusterLink.py  setup.cfg  submit.py  testPBS
cloudmesh_pbs/: metadata.py  submit.py  test.py
cmd3local/plugins/: cm_shell_pbs.py
django_files/mysite/: db.sqlite3
django_files/mysite/mysite/: settings.py
django_files/mysite/submit/: models.py
doc/: example_script  journal.rst  tister.rst  twisterPipelineSetup.rst  twisterScript
scripts/: twister.sh
