[metadata]
name = cloudmesh_pbs
version = 0.1
summary = A tool to simplify submitting jobs to pbs
description-file =
    README.rst
author = Cloudmesh Team
author-email = laszewski@gmail.com
home-page = http://github.org/cloudmesh/pbs
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux :: MacOS :: MacOS X
    Programming Language :: Python :: 2.7
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing
    Topic :: System :: Boot
    Topic :: System :: Systems Administration
    Framework :: Flask
    Environment :: OpenStack


[global]
setup-hooks =
    pbr.hooks.setup_hook

[install]
install-data=$HOME

[files]
packages =
    cloudmesh_pbs

#data_files =
#    .futuregrid/cmd3local/plugins = cmd3local/plugins/cm_shell_pbs.py

[entry_points]
console_scripts =
    cm-pbs = cloudmesh_pbs.submit:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

